--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NODOS</title>
+    <meta name="description" content="Prestamos personales adaptables a tus ingresos, en San Francisco Córdoba">
+    <meta name="keywords" content="Prestamos, cuotas fijas, ingresos, financiamiento, créditos, dinero, prestamos en linea">
     <link rel="shortcut icon" href="./img/nodoslogoescrito.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/estilo.css" />
@@ -37,7 +39,7 @@
     </header>
     <main class="main1">
         <div class="subtitulo">
-          <h1>Llevate tu préstamo al instante</h1>
+          <h1 class="llevatetuprestamo" >Llevate tu préstamo al instante</h1>
         </div>
           <div class="medio">
             <div class="gris-1"> 
