--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>NODOS CONTACTO</title>
+    <meta name="description" content="Consultenos y resuelva sus dudas">
+    <meta name="keywords" content="contacto, información de contacto, consultas, atención al cliente">
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css" />
@@ -36,7 +38,7 @@
       </nav>
     </header>
     <main>
-      <h1>Datos Personales</h1>
+      <h1 class="datospersonales" >Datos Personales</h1>
       <form action="./enviar-formulario.html" method="get">
         <article class="m-4">
         <h2>Formulario de Contacto:</h2>
