--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NODOS PREGUNTAS</title>
+    <meta name="description" content="Preguntas Frecuentes de nuestros clientes y potenciales clientes">
+    <meta name="keywords" content="preguntas frecuentes, preguntas rapidas, información útil, consultas comunes, ayuda">
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css" />
@@ -37,7 +39,7 @@
     </header>
     <main>
       <form action="./enviar-formulario.html" method="get">
-        <h1>Preguntas Frecuentes</h1>
+        <h1 class="preguntas" >Preguntas Frecuentes</h1>
         <div class="conteiner">
           <div class="row">
           <div class="col">
