--- a/pages/prestamos.html
+++ b/pages/prestamos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NODOS PRESTAMOS</title>
+    <meta name="description" content="Inicia el préstamo a tu medida completado diferentes datos personales">
+    <meta name="keywords" content="solucitud de prestamo, prestamo rapido, formulario de prestamo, prestamo en linea">
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css"/>
@@ -38,7 +40,7 @@
     <main>
       <form action="./enviar-formulario.html" method="get">
         <article class="m-4">
-        <h1>Prestamo Personal</h1>
+        <h1 class="prestamopersonal" >Prestamo Personal</h1>
         <h2>Solicitud de Préstamo:</h2>
         <div class="datos">
           <div class="form-1">
