--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Prestamos personales adaptables a tus ingresos, en San Francisco Córdoba">
     <meta name="keywords" content="Prestamos, cuotas fijas, ingresos, financiamiento, créditos, dinero, prestamos en linea">
     <link rel="shortcut icon" href="./img/nodoslogoescrito.png" type="image/x-icon" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./estilos/./css/bootstrap.min.css">
     <link rel="stylesheet" href="./estilos/estilo.css" />
   </head>
   <body>
@@ -137,6 +137,6 @@
       pedido del interesado, se deberá informar el nombre del responsable o
       usuario del banco de datos que proveyó la información.
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="./estilos/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
