--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Consultenos y resuelva sus dudas">
     <meta name="keywords" content="contacto, información de contacto, consultas, atención al cliente">
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../estilos/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css" />
   </head>
   <body>
