--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Preguntas Frecuentes de nuestros clientes y potenciales clientes">
     <meta name="keywords" content="preguntas frecuentes, preguntas rapidas, información útil, consultas comunes, ayuda">
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../estilos/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css" />
   </head>
   <body>
