--- a/pages/prestamos.html
+++ b/pages/prestamos.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Inicia el préstamo a tu medida completado diferentes datos personales">
     <meta name="keywords" content="solucitud de prestamo, prestamo rapido, formulario de prestamo, prestamo en linea">
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../estilos/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css"/>
   </head>
   <body>
