--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -39,36 +39,34 @@
     </header>
     <main>
       <form action="./enviar-formulario.html" method="get">
-        <h1 class="preguntas" >Preguntas Frecuentes</h1>
-        <div class="conteiner">
-          <div class="row">
-          <div class="col">
+        <h1 class="preguntas">Preguntas Frecuentes</h1>
+        <div class="conteiner1">
+          <div class="col1">
           <h3>¿Monto máximo a Solicitar?</h3>
             <p>Para saber cuál es el monto máximo que podés retirar, te invitamos a conocer tu disponible 100% online, ingresando a:
             <a href="../pages/prestamos.html">PRESTAMO</a>. o acercate a una de nuestras sucursales.</p>
           </div>
-          <div class="col">
+          <div class="col2">
           <h3>¿En cuantas cuotas se puede devolver el préstamo?</h3>
             <p>El monto mínimo es de 6 cuotas, tambien dependiendo de las características financieras del cliente</p>
           </div>
-          <div class="col">
+          <div class="col3">
           <h3>¿Que requisitos necesito para calificar?</h3>
             <p>Es requisito indispensable tener una fuende de ingresos, puede ser Jubilación, Relacion de dependencia, Monotributo, Responsable
             inscripto</p>
           </div>
-          <div class="col">
+          <div class="col4">
           <h3>¿Como accedo a dudas online?</h3>
             <p>Cualquier consulta puede ser vía<a href="https://wa.me/543564415853" target="_blank">Whatsapp</a>, o
             ingresando a: <a href="../pages/contacto.html">CONTACTO</a></p>
           </div> 
-          <div class="col">
+          <div class="col5">
           <h3>¿Cuando vencen mis cuotas?</h3>
             <p>Depende el contrato de cada cliente, es un dato a modificar en el momento de concretar el préstamo, sino consultanos al<a href="https://wa.me/543564415853" target="_blank">Whatsapp</a></p>
           </div>
-          <div class="col">
+          <div class="col6">
           <h3>¿Puedo adelantar cuotas?¿Cual es el descuento?</h3>
             <p>Si se puede adelantar cuotas, el descuento depende la fecha de pago en cada caso, aproximado un 15% de descuento, sino consultanos al <a href="https://wa.me/543564415853" target="_blank">Whatsapp</a></p>
-          </div>
           </div>
         </div>
       </form>
