--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./pages/prestamos.html">PRESTAMO</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/preguntas.html">PREGUNTAS</a>
+                <a class="nav-link active" aria-current="page" href="./pages/carrito.html">CARRITO</a>
               </li>
             </ul>
           </div>
@@ -44,48 +38,28 @@
         </div>
           <div class="medio">
             <div class="gris-1"> 
-              <img class="gris" src="./img/IMAGENGRIS.png" alt="imagengris"/>
-            </div>
-            <div id="carouselExampleCaptions" class="carousel slide">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <img class="gris" src="./img/200.png" alt="200"/>
+              <div class="cuotas">
+                <p>Cuota</p>
+                <p>50.000</p>
               </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="./img/200.png" class="d-block w-100" alt="200mil">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>En Cuotas Fijas</h5>
-                    <p>De $20.000</p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/300.png" class="d-block w-100" alt="300mil">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>En Cuotas Fijas</h5>
-                    <p>De $30.000</p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/400.png" class="d-block w-100" alt="400mil">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>En Cuotas Fijas</h5>
-                    <p>De $40.000</p>
-                  </div>
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
+              <button class="agregar-carrito">Agregar Carrito</button>
             </div>
-            <div class="mano-1">
-              <img class="mano" src="./img/darselamano.jpg" alt="darselamano"/>
+            <div class="gris-1"> 
+              <img class="gris" src="./img/300.png" alt="300"/>
+              <div class="cuotas">
+                <p>Cuota</p>
+                <p>75.000</p>
+              </div>
+              <button class="agregar-carrito">Agregar Carrito</button>
+            </div>
+            <div class="gris-1">
+              <img class="gris" src="./img/400.png" alt="400"/>
+              <div class="cuotas">
+                <p>Cuota</p>
+                <p>100.000</p>
+              </div>
+              <button class="agregar-carrito">Agregar Carrito</button>
             </div>
           </div>
           <p class="caja2">
